fixed code spacing

--- a/src/app/shared/styles/tl-variables.scss
+++ b/src/app/shared/styles/tl-variables.scss
@@ -50,7 +50,7 @@
 
   --wvr-font-family-sans-serif: var(--tl-font-family-sans-serif);
 
-  font-family: var(--tl-default-font-family-sans-serif);
+  font-family: var(--tl-font-family-sans-serif);
   font-size: var(--tl-font-size);
 
 }
